LPS-82190 - Search alignment fix

--- a/modules/apps/frontend-theme/frontend-theme-classic/src/css/components/_navbars.scss
+++ b/modules/apps/frontend-theme/frontend-theme-classic/src/css/components/_navbars.scss
@@ -30,7 +30,7 @@
 	}
 
 	.portlet-search-bar {
-		@include media-breakpoint-down(md) {
+		@include media-breakpoint-down(sm) {
 			width: 100%;
 		}
 	}
